bindings/c/pnf_c.hpp

/// \brief Opaque indicators handle.
    typedef struct PnfIndicators PnfIndicators;
/// \brief PnfSignal.
    typedef struct {
        PnfSignalType type;
        int column_index;
        double price;
    } PnfSignal;
/// \brief PnfPattern.
    typedef struct {
        PnfPatternType type;
        int start_column;
        int end_column;
        double price;
        bool is_bullish;
    } PnfPattern;
/// \brief PnfSupportResistanceLevel.
    typedef struct {
        double price;
        int touch_count;
        bool is_support;
    } PnfSupportResistanceLevel;
/// \brief PnfDoubleArray.
    typedef struct {
        double* data;
        size_t length;
    } PnfDoubleArray;
/// \brief PnfSignalArray.
    typedef struct {
        PnfSignal* data;
        size_t length;
    } PnfSignalArray;
/// \brief PnfPatternArray.
    typedef struct {
        PnfPattern* data;
        size_t length;
    } PnfPatternArray;
/// \brief PnfLevelArray.
    typedef struct {
        PnfSupportResistanceLevel* data;
        size_t length;
    } PnfLevelArray;
    // String output
/// \brief Indicators summary.
    /// \param ind 
    /// \return 
    PNF_API const char* pnf_indicators_summary(const PnfIndicators* ind);
/// \brief Indicators to string.
    /// \param ind 
    /// \return 
    PNF_API const char* pnf_indicators_to_string(const PnfIndicators* ind);
    // Memory management
/// \brief Free string.
    /// \param str 
    PNF_API void pnf_free_string(const char* str);
/// \brief Free double array.
    /// \param arr 
    PNF_API void pnf_free_double_array(PnfDoubleArray arr);
/// \brief Free signal array.
    /// \param arr 
    PNF_API void pnf_free_signal_array(PnfSignalArray arr);
/// \brief Free pattern array.
    /// \param arr 
    PNF_API void pnf_free_pattern_array(PnfPatternArray arr);
/// \brief Free level array.
    /// \param arr 
    PNF_API void pnf_free_level_array(PnfLevelArray arr);