bindings/rust/src/ffi.rs


    /// pnf_indicators_summary binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_summary(ind: *const PnfIndicators) -> *const c_char;
    /// pnf_indicators_to_string binding API.
    ///
    /// # Arguments
    /// * `ind` - 
    ///
    /// # Returns
    /// 
    pub fn pnf_indicators_to_string(ind: *const PnfIndicators) -> *const c_char;

    /// pnf_free_string binding API.
    ///
    /// # Arguments
    /// * `s` - 
    pub fn pnf_free_string(s: *const c_char);
    /// pnf_free_double_array binding API.
    pub fn pnf_free_double_array(arr: PnfDoubleArray);
    /// pnf_free_signal_array binding API.
    pub fn pnf_free_signal_array(arr: PnfSignalArray);
    /// pnf_free_pattern_array binding API.
    ///
    /// # Arguments
    /// * `arr` - 
    pub fn pnf_free_pattern_array(arr: PnfPatternArray);
    /// pnf_free_level_array binding API.
    pub fn pnf_free_level_array(arr: PnfLevelArray);
}
